--- a/estilos/estilo1.css
+++ b/estilos/estilo1.css
@@ -1,6 +1,14 @@
+body {
+    background-color: aqua;
+}
+
 #titulo {
     text-align: center;
     padding: 50px;
+}
+
+a {
+    color: white;
 }
 
 img {
@@ -21,14 +29,19 @@ h4 {
 }
 
 .secciones {
-    margin: 20px;
-    margin-bottom: 80px;
-    width: 600px;
-    height: 800px;
-    border: 2px;
+    margin: auto;
+    border: 1px solid;
     border-color: black;
+}
 
+.secciones img {
+    float: left;
+}
 
+.secciones p {
+    text-align: justify;
+    color: black;
+    font-family: 'Hurmit';
 }
 
 #divimagenes {
@@ -51,7 +64,7 @@ h4 {
 
 .row {
 
-    display: flex;
+    display: block;
     flex-direction: row;
     text-align: center;
 }
@@ -66,6 +79,8 @@ h4 {
 
 .h2nombre {
     text-align: center;
+    color: black;
+    font-family: 'Hurmit';
 }
 
 button {
